fix(Table): fix virtualized table overflow

--- a/packages/core/src/components/Table/TableVirtualizedBody/TableVirtualizedBody.module.scss
+++ b/packages/core/src/components/Table/TableVirtualizedBody/TableVirtualizedBody.module.scss
@@ -4,5 +4,6 @@
 
   &.withHeader {
     height: 100%;
+    overflow: hidden;
   }
 }
